renamed bin to bat, minor changes