@@ -3,6 +3,6 @@ package core.util;
 public abstract class StringUtil {
 	
 	public static boolean isEmptyString(String str) {
-		return str == null || str.isBlank();
+		return str == null || str.trim().isEmpty();
 	} 
 }
